--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,17 @@ header {
 
 header img {
     /* ADD THE RULES POSITION THE LOGO*/
+
+    /* 3 positioning option: 
+    1. relative (leaves the space it takes up in the layout) 
+
+    2. absolute (collapses the space it takes up and postions it to the brower window)
+
+    3. absolute & relative (collapses the space it takes up and positions it to a parent relative container) */
+
+    position: absolute;
+    top: 85px;
+    left: 100px;
 }
 
 section {
@@ -160,6 +171,9 @@ section {
     height: 150px;
     background-color: #696969;
     /* ADD THE RULES POSITION THE SECOND BOX */
+    position: relative;
+    top: 0;
+    left: 150px;
 }
 
 .box-3 {
@@ -167,6 +181,9 @@ section {
     height: 150px;
     background-color: #000;
     /* ADD THE RULES POSITION THE THIRD BOX */
+    position: relative;
+    top: 0;
+    left: 300px;
 }
 
 footer {
